<resources>

    <!-- Toast messages -->
    <string name="permission_camera">Camera permission to capture profile image.</string>
    <string name="permission_write">Write external storage permission to save profile image.</string>
    <string name="provide_first_name">Please provide first name.</string>
    <string name="provide_last_name">Please provide last name.</string>
    <string name="provide_date_of_birth">Please provide date of birth.</string>

    <!-- Navigation drawer headers items -->
    <string name="nav_header_learning">Learning</string>
    <string name="nav_header_settings">Settings</string>

    <string name="nav_header_alphabets">Alphabets</string>
    <string name="nav_header_numbers">Numbers</string>
    <string name="nav_header_colors">Colors</string>
    <string name="nav_header_birds">Birds</string>
    <string name="nav_header_fruits">Fruits</string>
    <string name="nav_header_animals">Animals</string>
    <string name="nav_header_shapes">Shapes</string>
    <string name="nav_header_vegetables">Vegetables</string>
    <string name="nav_header_stars">Stars</string>
    <string name="nav_header_body_parts">Body Parts</string>
    <string name="nav_header_poems">Poems</string>
    <string name="nav_header_music_instruments">Music Instruments</string>
    <string name="nav_header_vehicles">Vehicles</string>

    <string name="nav_header_preferences">Preferences</string>

    <!-- ToolBar title labels -->
    <string name="profile_screen_title">Kid Profile</string>
    <string name="alphabets_screen_title">Alphabets</string>
    <string name="numbers_screen_title">Numbers</string>
    <string name="colors_screen_title">Colors</string>
    <string name="birds_screen_title">Birds</string>
    <string name="fruits_screen_title">Fruits</string>
    <string name="animals_screen_title">Animals</string>
    <string name="shapes_screen_title">Shapes</string>
    <string name="vegetables_screen_title">Vegetables</string>
    <string name="stars_screen_title">Stars</string>
    <string name="body_parts_screen_title">Body Parts</string>
    <string name="poems_screen_title">Poems</string>
    <string name="music_instru_screen_title">Music Instruments</string>
    <string name="vehicles_screen_title">Vehicles</string>
    <string name="preferences_screen_title">Preferences</string>


    <!-- Language short names -->
    <string name="language_english_short">Eng</string>
    <string name="language_gujarati_short">Guj</string>
    <string name="language_hindi_short">Hin</string>
    <string name="language_marathi_short">Mar</string>

    <!-- Profile screen labels -->
    <string name="profile_first_name">First Name</string>
    <string name="profile_last_name">Last Name</string>
    <string name="profile_date_of_birth">Date of Birth</string>
    <string name="profile_save_button">Save</string>
    <string name="profile_image_dialog_title">Select Profile Image</string>
    <string name="profile_image_dialog_camera">Capture Image using Camera</string>
    <string name="profile_image_dialog_gallery">Select Image from Gallery</string>

</resources>
